# kreyol-chat

./: .gitignore  LICENSE  README.md
docs/: data-sources-sweep-4.md  data.md  phase-0.md  phase-1.md  plan.md
ml/: README.md  pyproject.toml
ml/corpus/: README.md  __init__.py  audit.py  build_v0_2.py  checkpoint_prompts.json  checkpoint_prompts_DRAFT.json  common.py  config.py  config_v0_1.py  config_v0_2.py  corpus_index.py  dedup.py  evalslices.py  family.py  federal_pdfs.py  filter.py  fineweb_ingest.py  glossary_pairs_federal.json  ingest.py  j0_bloom.py  j0_fineweb.py  j0_overlap.py  j0_scoping.py  junk.py  normalize.py  proverbs_fetch.py  report.py  report_v0_1.py  report_v0_2.py  report_v0_2_scoping.py  rights.yaml  run.py  run_v0_1.py  schema.py  small_wins.py  splits.yaml  voa.py  voa_crawl.py
ml/corpus/contributors/: family-contributor-1.md
ml/fertility/: README.md  __init__.py  authored.py  config.py  counters.py  counting.py  data_sources.py  report.py  results.csv  run.py
ml/probe/: README.md  config.py  data.py  measures.py  modal_app.py  naturalness_key.json  report.py  run.py
ml/reports/: README.md  audit_human_labels.csv  audit_model_labels.csv  audit_model_summary.md  audit_sample_review.md  audit_summary-full.json  base_model_probe.md  corpus_v0.md  corpus_v0_1.md  corpus_v0_2.md  corpus_v0_2_scoping.md  depth_sweep.md  f2_gates.md  fertility.md  modelc_v0.md  modelc_v0_generations.json  probe_naturalness_sheet.md  rustbpe_spike.md  tokenizer_v0.md  train_smoke.md
ml/tokenizer/: README.md  __init__.py  config.py  convert.py  core.py  data.py  external.py  report.py  run.py  spike.py  sweep.py
ml/tokenizer/kreyol-bpe/: meta.json  tokenizer.json  tokenizer.pkl  tokenizer_tiktoken.json  vocab_merges.json
ml/train/: README.md  __init__.py  apply_savesteps.py  bpb_g.py  config.py  data_g.py  g_report.py  g_run.py  gates.py  llama_app.py  llama_config.py  llama_model.py  modal_app.py  patch_llamacpp_cpp.py  prepare.py  report.py  run.py  tokenize_g.py
web/: README.md
