[project]
name = "kreyol-lm"
version = "0.0.0"
description = "Corpus, tokenizer, fertility, and base-model probe workspace for kreyol-chat (Phase 0)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "datasets",
    "tokenizers",
    "tiktoken",
    "transformers",
    "sacrebleu",
    "anthropic",
    "modal",
    "datasketch",
    "matplotlib",
    "pydantic",             # §5.2 document-metadata schema (corpus/schema.py)
    "pyyaml",               # read rights.yaml / splits.yaml
    "mwparserfromhell",     # Wikipedia wikitext -> plaintext extractor (Workstream A ingest)
    "fasttext-wheel",       # lid.176 language id for the quality audit
    "huggingface-hub",      # pinned-revision source downloads
    "beautifulsoup4",       # parse the CreolePro proverbs blog (corpus/proverbs_fetch.py)
]

# This workspace is a collection of scripts, not an installable package.
[tool.uv]
package = false
