[project]
name = "kreyol-lm"
version = "0.0.0"
description = "Corpus, tokenizer, fertility, and base-model probe workspace for kreyol-chat (Phase 0)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "datasets",
    "tokenizers",
    "tiktoken",
    "transformers",
    "sacrebleu",
    "sentencepiece",        # sacreBLEU spBLEU (flores200 tokenizer) for the base-model probe (Workstream D)
    "anthropic",
    "modal",
    "datasketch",
    "pyarrow",              # corpus v0.1 -> parquet shards for nanochat (Workstream F train/prepare)
    "matplotlib",
    "pydantic",             # §5.2 document-metadata schema (corpus/schema.py)
    "pyyaml",               # read rights.yaml / splits.yaml
    "mwparserfromhell",     # Wikipedia wikitext -> plaintext extractor (Workstream A ingest)
    "fasttext-wheel",       # lid.176 language id for the quality audit
    "huggingface-hub",      # pinned-revision source downloads
    "beautifulsoup4",       # parse the CreolePro proverbs blog (corpus/proverbs_fetch.py)
    "rustbpe>=0.1.0",       # nanochat's byte-level BPE trainer (Workstream B tokenizer)
    "lxml",                 # fast HTML/XML parser for the VOA crawler (Workstream J1)
    "requests",             # polite HTTP for VOA + federal-PDF harvest (Workstream J1/J2)
    "pymupdf",              # multi-column PDF text extraction (Workstream J2 federal PDFs)
    "pdfplumber",           # word-position/table extraction for glossary term-pair mining (J2/J3)
]

# This workspace is a collection of scripts, not an installable package.
[tool.uv]
package = false
